# C-step-counter-test

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c
